Fix spacing in the sidebar

--- a/app/assets/stylesheets/campaign.scss
+++ b/app/assets/stylesheets/campaign.scss
@@ -56,14 +56,10 @@ body {
       margin-bottom: 0;
       color: $primary-color;
     }
-    .columns.tight-top {
-      padding-top: 0;
-    }
   }
 
   #or{
     font-size: 1.5em;
-    padding: 0.5em;
   }
 
   .browser-to-mobile-cta{
